# QA-ApiCase

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  external_httplib_notice.txt
.github/workflows/: ci-cd.yml
include/: httplib.h  logic.h
src/: logic.cpp  main.cpp  tests.cpp
web/: index.html
